  * cli/apport-cli: Add option for keeping the report file without sending it,
    and to display its path. This is for sending the report later, copying
    it from a server to a workstation with internet connection, etc.
  * apport/crashdb_impl/launchpad.py: Simplify _subscribe_triaging_team(), now
    that we do not differ between main and universe policies any more.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 10 Jul 2007 17:59:41 +0100

apport (0.89) gutsy; urgency=low

  Implement private crash bug handling, according to
  https://wiki.ubuntu.com/CrashReporting:

  * apport/crashdb_impl/launchpad.py:
    - upload(): If we have an Ubuntu bug, mark it as private and only
      subscribe 'apport' (the 'Apport retracing service' user).
    - Add function _subscribe_triaging_team() which subscribes
      ubuntu-crashes-main for source packages in Ubuntu main or restricted, or
      ubuntu-crashes-universe for other packages. It does not touch non-Ubuntu
      bugs, since these are not marked private by default and are outside of
      the scope of this spec.
    - update(), _mark_dup_checked(): Call _subscribe_triaging_team().
    - Note: This entire spec is a gross hack, and Ubuntu derivatives do not
      benefit from it at all. We have to live with this until LP grows a real
      crash database.
    - get_distro_release(): Make this function work with private bugs, too, by
      using p-lp-bugs' safe_urlopen().

  Bug fixes:

  * apport/crashdb_impl/launchpad.py: Revert simplification change of 0.85:
    BugList returns a set of strings, not integers; due to non-identity they
    do not work with the usual set operations.
  * apport/crashdb_impl/launchpad.py: Add function get_source_component() to
    query Launchpad for the component of a given distribution and source
    package. (This will be required for implementing crash-reporting).
  * backends/packaging-apt-dpkg.py, _search_contents(): Package list is