@@ -26,6 +26,3 @@ retrace failures:
  - #124082: CoreDump.gz not removed
  - http://launchpadlibrarian.net/8320761/StacktraceSource.txt: dd.c not found
  - does not find files with complete path
-
-server needs:
-- hook directory for scripts which are always executed
